Bug 1407672 - Add docker-image and toolchain support to l10n leaf jobs. r=Callek
This approach allows to specify the `docker-image` and set of
`toolchains` to the l10n leaf jobs using the `by-platform:` override
mechanism.  We don't support anything but in-tree docker images at
this time, and the schema will warn if a different type of docker
configuration block is used.  It wouldn't be hard to grow the
additional blocks, but let's reduce duplication for now.

It might be considered better to inherit the `docker-image` and set of
`toolchains` from the underlying `dependent-task`, but we don't do
that for two reasons.  The main reason is that it's an explicit goal
to be able to "cross repack": to repack, say, a Windows binary on a
Linux worker.  In that situation, the docker-image and toolchains
differ between the builder and the repack worker.

A smaller technical obstruction is that by the time the l10n transform
sees the dependent task, the docker image and set of toolchains have
been processed.  The l10n transform would have to "reconstitute" the
docker image changes and the set of toolchains; it would be very
fragile.

Taken together, it's better to be explicit, reduce unexpected
interactions, and repeat the information in the l10n leaf tasks.

MozReview-Commit-ID: TmgJyYU5dx

UltraBlame original commit: 7a93b841a26ff8f5cfffea6fcdea3d243ca32f8d

--- a/taskcluster/ci/nightly-l10n/kind.yml
+++ b/taskcluster/ci/nightly-l10n/kind.yml
@@ -77,6 +77,14 @@ taskgraph
 .
 transforms
 .
+use_toolchains
+:
+transforms
+-
+taskgraph
+.
+transforms
+.
 job
 :
 transforms
@@ -94,6 +102,8 @@ dependencies
 :
 -
 build
+-
+toolchain
 only
 -
 for
@@ -280,6 +290,45 @@ api
 nightly
 :
 18000
+docker
+-
+image
+:
+by
+-
+build
+-
+platform
+:
+default
+:
+in
+-
+tree
+:
+desktop
+-
+build
+android
+-
+api
+-
+16
+-
+nightly
+:
+in
+-
+tree
+:
+android
+-
+build
+win
+.
+*
+:
+null
 tooltool
 :
 by
