Bug 1403322 - schedule jsreftests inclusively; r=ahal
This is just one flavor of the "reftets" suite, so we need to add a distinct
scheduling component for it.

MozReview-Commit-ID: AtKuvuUCk1l

UltraBlame original commit: 547109f6eb1d3c93cd60a59cf8d2293b6e0b08b4

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -1970,24 +1970,13 @@ suite
 jsreftest
 when
 :
-files
--
-changed
+schedules
 :
--
-js
-/
-src
-/
-*
-*
--
-js
-/
-public
-/
-*
-*
+[
+'
+jsreftest
+'
+]
 tier
 :
 by
