--- a/taskcluster/ci/toolchain/linux.yml
+++ b/taskcluster/ci/toolchain/linux.yml
@@ -1345,6 +1345,124 @@ tar
 xz
 linux64
 -
+proguard
+-
+jar
+-
+repack
+:
+description
+:
+"
+proguard
+.
+jar
+repack
+toolchain
+build
+"
+treeherder
+:
+kind
+:
+build
+platform
+:
+toolchains
+/
+opt
+symbol
+:
+TL
+(
+proguard
+-
+jar
+)
+tier
+:
+1
+worker
+-
+type
+:
+aws
+-
+provisioner
+-
+v1
+/
+gecko
+-
+{
+level
+}
+-
+b
+-
+linux
+worker
+:
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+desktop
+-
+build
+}
+max
+-
+run
+-
+time
+:
+36000
+run
+:
+using
+:
+toolchain
+-
+script
+script
+:
+repack
+-
+proguard
+-
+jar
+.
+sh
+toolchain
+-
+artifact
+:
+public
+/
+build
+/
+proguard
+-
+jar
+.
+tar
+.
+xz
+toolchain
+-
+alias
+:
+proguard
+-
+jar
+linux64
+-
 rust
 -
 1
