Bug 1352599 - Part 2: Add PROGUARD_JAR configure option. r=chmanchester
MozReview-Commit-ID: 9ZHaGfmrjNI

UltraBlame original commit: 1da1df814ad3bcb7aefb5f2c00c18b3c55f72284

--- a/mobile/android/base/Makefile.in
+++ b/mobile/android/base/Makefile.in
@@ -1775,6 +1775,9 @@ libs
 .
 cfg
 (
+PROGUARD_JAR
+)
+(
 REPORT_BUILD
 )
 (
@@ -1792,18 +1795,8 @@ Xms128m
 -
 jar
 (
-ANDROID_SDK_ROOT
+PROGUARD_JAR
 )
-/
-tools
-/
-proguard
-/
-lib
-/
-proguard
-.
-jar
 \
 (
 proguard_config_dir
@@ -1923,6 +1916,9 @@ proguard
 .
 cfg
 (
+PROGUARD_JAR
+)
+(
 REPORT_BUILD
 )
 (
@@ -1940,18 +1936,8 @@ Xms128m
 -
 jar
 (
-ANDROID_SDK_ROOT
+PROGUARD_JAR
 )
-/
-tools
-/
-proguard
-/
-lib
-/
-proguard
-.
-jar
 \
 (
 proguard_config_dir
