--- a/taskcluster/ci/nightly-l10n/kind.yml
+++ b/taskcluster/ci/nightly-l10n/kind.yml
@@ -329,6 +329,30 @@ win
 *
 :
 null
+toolchains
+:
+by
+-
+build
+-
+platform
+:
+default
+:
+[
+]
+android
+-
+api
+-
+16
+-
+nightly
+:
+-
+proguard
+-
+jar
 tooltool
 :
 by
