Backed out changeset 1da1df814ad3 (bug 1352599)
UltraBlame original commit: fbc942d188228d69b3f6d33eeaa45cce2a9e808a

--- a/mobile/android/base/Makefile.in
+++ b/mobile/android/base/Makefile.in
@@ -1775,9 +1775,6 @@ libs
 .
 cfg
 (
-PROGUARD_JAR
-)
-(
 REPORT_BUILD
 )
 (
@@ -1795,8 +1792,18 @@ Xms128m
 -
 jar
 (
-PROGUARD_JAR
+ANDROID_SDK_ROOT
 )
+/
+tools
+/
+proguard
+/
+lib
+/
+proguard
+.
+jar
 \
 (
 proguard_config_dir
@@ -1916,9 +1923,6 @@ proguard
 .
 cfg
 (
-PROGUARD_JAR
-)
-(
 REPORT_BUILD
 )
 (
@@ -1936,8 +1940,18 @@ Xms128m
 -
 jar
 (
-PROGUARD_JAR
+ANDROID_SDK_ROOT
 )
+/
+tools
+/
+proguard
+/
+lib
+/
+proguard
+.
+jar
 \
 (
 proguard_config_dir
