Bug 1361080 - add aboutdevtools component;r=ochameau
MozReview-Commit-ID: GuyQfXRKFpb

UltraBlame original commit: d2365ea174e98e10f89cc60269d291a13d40a39a

--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -2256,6 +2256,26 @@ browser
 /
 components
 /
+aboutdevtools
+-
+registration
+.
+js
+RESPATH
+/
+browser
+/
+components
+/
+aboutdevtools
+.
+manifest
+RESPATH
+/
+browser
+/
+components
+/
 Experiments
 .
 manifest
