--- a/dom/html/test/forms/mochitest.ini
+++ b/dom/html/test/forms/mochitest.ini
@@ -204,106 +204,36 @@ test_input_date_bad_input
 .
 html
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 [
 test_input_date_key_events
 .
 html
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 [
 test_input_datetime_input_change_events
 .
 html
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 [
 test_input_datetime_focus_blur
 .
 html
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 [
 test_input_datetime_focus_blur_events
 .
 html
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 [
 test_input_datetime_focus_state
 .
 html
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 [
 test_input_datetime_tabindex
 .
 html
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 [
 test_input_defaultValue
 .
@@ -480,6 +410,25 @@ test_input_sanitization
 .
 html
 ]
+skip
+-
+if
+=
+os
+=
+=
+'
+android
+'
+&
+&
+debug
+#
+Extremely
+slow
+on
+debug
+android
 [
 test_input_textarea_set_value_no_scroll
 .
@@ -490,31 +439,11 @@ test_input_time_key_events
 .
 html
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 [
 test_input_time_sec_millisec_field
 .
 html
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 [
 test_input_types_pref
 .
