--- a/js/xpconnect/tests/chrome/chrome.ini
+++ b/js/xpconnect/tests/chrome/chrome.ini
@@ -278,6 +278,19 @@ mochitest
 file_evalInSandbox
 .
 html
+!
+/
+js
+/
+xpconnect
+/
+tests
+/
+mochitest
+/
+file_xrayic
+.
+html
 [
 test_APIExposer
 .
@@ -721,6 +734,11 @@ html
 ]
 [
 test_wrappers
+.
+xul
+]
+[
+test_xrayic
 .
 xul
 ]
