Bug 1407056: Follow-up: Skip test on Android debug for flakiness. r=bustage
MozReview-Commit-ID: 39slYE2zP95

UltraBlame original commit: 6c0e650042cde2a01e58b3bb6adf6a8eeacca38b

--- a/toolkit/components/extensions/test/xpcshell/xpcshell-content.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-content.ini
@@ -46,6 +46,19 @@ test_ext_contentscript_triggeringPrincipal
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+android
+"
+&
+&
+debug
 [
 test_ext_contentscript_xrays
 .
