--- a/netwerk/test/gtest/parse-ftp/D-WinNT.in
+++ b/netwerk/test/gtest/parse-ftp/D-WinNT.in
@@ -522,18 +522,6 @@ SLeong
 DIR
 >
 svr
-07
--
-21
--
-00
-07
-:
-22AM
-<
-JUNCTION
->
-a_junction_sample
 10
 -
 23
@@ -621,6 +609,38 @@ Valentineoffprank
 HiRes
 .
 jpg
+01
+-
+11
+-
+14
+12
+:
+25AM
+18864566
+Bug961346
+10
+-
+10
+-
+2014
+10
+:
+10AM
+<
+DIR
+>
+Bug1061898
+01
+-
+18
+-
+12
+19
+:
+00
+30724571
+Bug1125816
 226
 Transfer
 complete
