--- a/dom/file/tests/mochitest.ini
+++ b/dom/file/tests/mochitest.ini
@@ -142,6 +142,28 @@ Android
 Bug
 775227
 [
+test_fileapi_slice2
+.
+html
+]
+skip
+-
+if
+=
+(
+toolkit
+=
+=
+'
+android
+'
+)
+#
+Android
+:
+Bug
+775227
+[
 test_fileapi_slice_image
 .
 html
