Bug 1305230 - Splitting test_fileapi.html and test_fileapi_worker.html in multiple files, r=me
UltraBlame original commit: a1407c6e9785c7b678ccfbbba09aca0f9e0cfffa

--- a/dom/file/tests/mochitest.ini
+++ b/dom/file/tests/mochitest.ini
@@ -103,12 +103,42 @@ test_file_negative_date
 html
 ]
 [
-test_fileapi
+test_fileapi_basic
 .
 html
 ]
 [
-test_fileapi_worker
+test_fileapi_encoding
+.
+html
+]
+[
+test_fileapi_twice
+.
+html
+]
+[
+test_fileapi_other
+.
+html
+]
+[
+test_fileapi_basic_worker
+.
+html
+]
+[
+test_fileapi_encoding_worker
+.
+html
+]
+[
+test_fileapi_twice_worker
+.
+html
+]
+[
+test_fileapi_other_worker
 .
 html
 ]
