--- a/dom/file/tests/mochitest.ini
+++ b/dom/file/tests/mochitest.ini
@@ -150,7 +150,7 @@ worker_fileReader
 .
 js
 [
-test_fileapi_slice
+test_fileapi_slice_realFile_1
 .
 html
 ]
@@ -172,7 +172,51 @@ Android
 Bug
 775227
 [
-test_fileapi_slice2
+test_fileapi_slice_realFile_2
+.
+html
+]
+skip
+-
+if
+=
+(
+toolkit
+=
+=
+'
+android
+'
+)
+#
+Android
+:
+Bug
+775227
+[
+test_fileapi_slice_memFile_1
+.
+html
+]
+skip
+-
+if
+=
+(
+toolkit
+=
+=
+'
+android
+'
+)
+#
+Android
+:
+Bug
+775227
+[
+test_fileapi_slice_memFile_2
 .
 html
 ]
