--- a/dom/file/tests/mochitest.ini
+++ b/dom/file/tests/mochitest.ini
@@ -150,7 +150,7 @@ worker_fileReader
 .
 js
 [
-test_fileapi_slice_realFile_1
+test_fileapi_slice
 .
 html
 ]
@@ -172,51 +172,7 @@ Android
 Bug
 775227
 [
-test_fileapi_slice_realFile_2
-.
-html
-]
-skip
--
-if
-=
-(
-toolkit
-=
-=
-'
-android
-'
-)
-#
-Android
-:
-Bug
-775227
-[
-test_fileapi_slice_memFile_1
-.
-html
-]
-skip
--
-if
-=
-(
-toolkit
-=
-=
-'
-android
-'
-)
-#
-Android
-:
-Bug
-775227
-[
-test_fileapi_slice_memFile_2
+test_fileapi_slice2
 .
 html
 ]
