Backed out changeset a1407c6e9785 (bug 1305230)
UltraBlame original commit: daea2bcda8cb8de4f159176a5b0a87e6af57c0c1

--- a/dom/file/tests/mochitest.ini
+++ b/dom/file/tests/mochitest.ini
@@ -103,42 +103,12 @@ test_file_negative_date
 html
 ]
 [
-test_fileapi_basic
+test_fileapi
 .
 html
 ]
 [
-test_fileapi_encoding
-.
-html
-]
-[
-test_fileapi_twice
-.
-html
-]
-[
-test_fileapi_other
-.
-html
-]
-[
-test_fileapi_basic_worker
-.
-html
-]
-[
-test_fileapi_encoding_worker
-.
-html
-]
-[
-test_fileapi_twice_worker
-.
-html
-]
-[
-test_fileapi_other_worker
+test_fileapi_worker
 .
 html
 ]
