--- a/dom/file/tests/mochitest.ini
+++ b/dom/file/tests/mochitest.ini
@@ -35,6 +35,9 @@ html
 file_nonascii_blob_url
 .
 html
+fileutils
+.
+js
 fileapi_chromeScript
 .
 js
@@ -121,28 +124,6 @@ worker_fileReader
 js
 [
 test_fileapi_slice
-.
-html
-]
-skip
--
-if
-=
-(
-toolkit
-=
-=
-'
-android
-'
-)
-#
-Android
-:
-Bug
-775227
-[
-test_fileapi_slice_image
 .
 html
 ]
