Backed out changeset a7b1484b2367 (bug 1400098)
UltraBlame original commit: 5a9bea5b8dd2f74954a38b5d90298f14f2167b51

--- a/dom/workers/test/mochitest.ini
+++ b/dom/workers/test/mochitest.ini
@@ -309,6 +309,12 @@ html
 websocket_https_worker
 .
 js
+worker_fileReader
+.
+js
+fileapi_chromeScript
+.
+js
 importScripts_3rdParty_worker
 .
 js
@@ -1105,6 +1111,11 @@ html
 ]
 [
 test_sharedWorker_lifetime
+.
+html
+]
+[
+test_fileReader
 .
 html
 ]
