Bug 1339989 - Create a sixgill compilation toolchain job, r=glandium
UltraBlame original commit: 78eb19c1cbfab13082cfa36780322be30e7fc9b4

--- a/taskcluster/ci/hazard/kind.yml
+++ b/taskcluster/ci/hazard/kind.yml
@@ -220,7 +220,7 @@ manifests
 /
 linux64
 /
-hazard
+releng
 .
 manifest
 "
@@ -299,6 +299,14 @@ gcc
 4
 .
 9
+-
+linux64
+-
+sixgill
+-
+linux64
+-
+rust
 linux64
 -
 haz
@@ -357,7 +365,7 @@ manifests
 /
 linux64
 /
-hazard
+releng
 .
 manifest
 "
@@ -429,3 +437,11 @@ gcc
 4
 .
 9
+-
+linux64
+-
+sixgill
+-
+linux64
+-
+rust
