--- a/taskcluster/ci/toolchain/linux.yml
+++ b/taskcluster/ci/toolchain/linux.yml
@@ -847,6 +847,159 @@ tar
 xz
 linux64
 -
+sixgill
+:
+description
+:
+"
+sixgill
+GCC
+plugin
+build
+"
+treeherder
+:
+kind
+:
+build
+platform
+:
+toolchains
+/
+opt
+symbol
+:
+TL
+(
+sixgill
+)
+tier
+:
+1
+worker
+-
+type
+:
+aws
+-
+provisioner
+-
+v1
+/
+gecko
+-
+{
+level
+}
+-
+b
+-
+linux
+worker
+:
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+desktop
+-
+build
+}
+max
+-
+run
+-
+time
+:
+3600
+run
+:
+using
+:
+toolchain
+-
+script
+script
+:
+build
+-
+gcc
+-
+sixgill
+-
+plugin
+-
+linux
+.
+sh
+resources
+:
+-
+'
+build
+/
+unix
+/
+build
+-
+gcc
+/
+build
+-
+gcc
+.
+sh
+'
+-
+'
+taskcluster
+/
+scripts
+/
+misc
+/
+build
+-
+gcc
+-
+sixgill
+-
+plugin
+-
+linux
+.
+sh
+'
+toolchain
+-
+artifact
+:
+public
+/
+build
+/
+sixgill
+.
+tar
+.
+xz
+toolchains
+:
+-
+linux64
+-
+gcc
+-
+4
+.
+9
+linux64
+-
 binutils
 :
 description
@@ -2011,9 +2164,9 @@ toolchains
 -
 linux64
 -
-gcc
+clang
 -
-4
+3
 .
 9
 -
