Bug 1281241 - move mochitest-plain, screenshots, and xpcshell off m1.medium. r=gbrown
UltraBlame original commit: d1df54aa8b21d735965c8fe7bead71cdc036f1b6

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -2415,17 +2415,7 @@ android
 xlarge
 default
 :
-legacy
-#
-Bug
-1281241
-:
-migrating
-to
-m3
-.
-large
-instances
+default
 chunks
 :
 by
@@ -3464,11 +3454,6 @@ browser
 chrome
 -
 screenshots
-instance
--
-size
-:
-legacy
 allow
 -
 software
@@ -12601,17 +12586,7 @@ android
 xlarge
 default
 :
-legacy
-#
-Bug
-1281241
-:
-migrating
-to
-m3
-.
-large
-instances
+default
 max
 -
 run
