servo: Merge #18854 - Make optional the usage of some unstable features (from servo:servo-unstable-feature); r=nox
With `--no-default-features --features default-except-unstable`, more crates can now be compiled on stable Rust. This will help integrate them in rustc’s regression testing and compiler performance benchmarking.

Source-Repo: https://github.com/servo/servo
Source-Revision: 78aaa85aec8184d0a2d70006c45034d7c2ec561a

UltraBlame original commit: 6077a8b545d687c012d154ae8befdfd79d2f07f7

--- a/servo/components/compositing/Cargo.toml
+++ b/servo/components/compositing/Cargo.toml
@@ -130,6 +130,18 @@ path
 net_traits
 "
 }
+nonzero
+=
+{
+path
+=
+"
+.
+.
+/
+nonzero
+"
+}
 profile_traits
 =
 {
@@ -177,13 +189,6 @@ path
 /
 geometry
 "
-features
-=
-[
-"
-servo
-"
-]
 }
 servo_url
 =
