--- a/servo/components/layout_thread/Cargo.toml
+++ b/servo/components/layout_thread/Cargo.toml
@@ -53,6 +53,23 @@ lib
 rs
 "
 [
+features
+]
+unstable
+=
+[
+"
+parking_lot
+/
+nightly
+"
+"
+nonzero
+/
+unstable
+"
+]
+[
 dependencies
 ]
 app_units
@@ -208,24 +225,25 @@ path
 net_traits
 "
 }
-parking_lot
+nonzero
 =
 {
-version
+path
+=
+"
+.
+.
+/
+nonzero
+"
+}
+parking_lot
 =
 "
 0
 .
 4
 "
-features
-=
-[
-"
-nightly
-"
-]
-}
 profile_traits
 =
 {
