--- a/servo/components/nonzero/Cargo.toml
+++ b/servo/components/nonzero/Cargo.toml
@@ -4,7 +4,7 @@ package
 name
 =
 "
-servo_geometry
+nonzero
 "
 version
 =
@@ -40,11 +40,6 @@ false
 [
 lib
 ]
-name
-=
-"
-servo_geometry
-"
 path
 =
 "
@@ -53,26 +48,26 @@ lib
 rs
 "
 [
+features
+]
+unstable
+=
+[
+"
+serde
+/
+unstable
+"
+]
+[
 dependencies
 ]
-app_units
+serde
 =
 "
+1
+.
 0
 .
-5
-"
-euclid
-=
-"
-0
-.
-15
-"
-heapsize
-=
-"
-0
-.
-4
+14
 "
