--- a/servo/components/servo/Cargo.toml
+++ b/servo/components/servo/Cargo.toml
@@ -64,16 +64,6 @@ rlib
 [
 features
 ]
-default
-=
-[
-"
-webdriver
-"
-"
-max_log_level
-"
-]
 max_log_level
 =
 [
@@ -128,6 +118,30 @@ oculusvr
 webvr
 /
 oculusvr
+"
+]
+unstable
+=
+[
+"
+euclid
+/
+unstable
+"
+"
+gfx
+/
+unstable
+"
+"
+msg
+/
+unstable
+"
+"
+profile
+/
+unstable
 "
 ]
 [
