--- a/servo/ports/servo/Cargo.toml
+++ b/servo/ports/servo/Cargo.toml
@@ -326,6 +326,24 @@ default
 =
 [
 "
+unstable
+"
+"
+default
+-
+except
+-
+unstable
+"
+]
+default
+-
+except
+-
+unstable
+=
+[
+"
 webdriver
 "
 "
@@ -388,6 +406,15 @@ oculusvr
 libservo
 /
 oculusvr
+"
+]
+unstable
+=
+[
+"
+libservo
+/
+unstable
 "
 ]
 [
