--- a/servo/components/msg/Cargo.toml
+++ b/servo/components/msg/Cargo.toml
@@ -53,6 +53,18 @@ lib
 rs
 "
 [
+features
+]
+unstable
+=
+[
+"
+nonzero
+/
+unstable
+"
+]
+[
 dependencies
 ]
 bitflags
@@ -76,10 +88,19 @@ heapsize_derive
 .
 1
 "
-serde
+nonzero
 =
 {
-version
+path
+=
+"
+.
+.
+/
+nonzero
+"
+}
+serde
 =
 "
 1
@@ -88,14 +109,6 @@ version
 .
 14
 "
-features
-=
-[
-"
-unstable
-"
-]
-}
 webrender_api
 =
 {
