Bug 1352599 - Part 1: Add a Proguard toolchain task for Android builds. r=froydnj
MozReview-Commit-ID: 5lyHGLkzyg

UltraBlame original commit: 366262985fa8b12e1a3a7c6131d7697fcfc1a624

--- a/taskcluster/ci/toolchain/linux.yml
+++ b/taskcluster/ci/toolchain/linux.yml
@@ -847,159 +847,6 @@ tar
 xz
 linux64
 -
-sixgill
-:
-description
-:
-"
-sixgill
-GCC
-plugin
-build
-"
-treeherder
-:
-kind
-:
-build
-platform
-:
-toolchains
-/
-opt
-symbol
-:
-TL
-(
-sixgill
-)
-tier
-:
-1
-worker
--
-type
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-{
-level
-}
--
-b
--
-linux
-worker
-:
-docker
--
-image
-:
-{
-in
--
-tree
-:
-desktop
--
-build
-}
-max
--
-run
--
-time
-:
-3600
-run
-:
-using
-:
-toolchain
--
-script
-script
-:
-build
--
-gcc
--
-sixgill
--
-plugin
--
-linux
-.
-sh
-resources
-:
--
-'
-build
-/
-unix
-/
-build
--
-gcc
-/
-build
--
-gcc
-.
-sh
-'
--
-'
-taskcluster
-/
-scripts
-/
-misc
-/
-build
--
-gcc
--
-sixgill
--
-plugin
--
-linux
-.
-sh
-'
-toolchain
--
-artifact
-:
-public
-/
-build
-/
-sixgill
-.
-tar
-.
-xz
-toolchains
-:
--
-linux64
--
-gcc
--
-4
-.
-9
-linux64
--
 binutils
 :
 description
@@ -1496,6 +1343,124 @@ dmg
 tar
 .
 xz
+linux64
+-
+proguard
+-
+jar
+-
+repack
+:
+description
+:
+"
+proguard
+.
+jar
+repack
+toolchain
+build
+"
+treeherder
+:
+kind
+:
+build
+platform
+:
+toolchains
+/
+opt
+symbol
+:
+TL
+(
+proguard
+-
+jar
+)
+tier
+:
+1
+worker
+-
+type
+:
+aws
+-
+provisioner
+-
+v1
+/
+gecko
+-
+{
+level
+}
+-
+b
+-
+linux
+worker
+:
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+desktop
+-
+build
+}
+max
+-
+run
+-
+time
+:
+36000
+run
+:
+using
+:
+toolchain
+-
+script
+script
+:
+repack
+-
+proguard
+-
+jar
+.
+sh
+toolchain
+-
+artifact
+:
+public
+/
+build
+/
+proguard
+-
+jar
+.
+tar
+.
+xz
+toolchain
+-
+alias
+:
+proguard
+-
+jar
 linux64
 -
 rust
