Bug 1408277 - Add a toolchain job for clang 5.0. r=froydnj
UltraBlame original commit: a01135b451a4efbeecb1e8e2f53d4c8dd1f80a33

--- a/taskcluster/ci/toolchain/linux.yml
+++ b/taskcluster/ci/toolchain/linux.yml
@@ -132,7 +132,7 @@ run
 -
 time
 :
-36000
+7200
 run
 :
 using
@@ -304,7 +304,7 @@ run
 -
 time
 :
-36000
+7200
 run
 :
 using
@@ -350,6 +350,167 @@ clang
 clang
 -
 4
+-
+linux64
+.
+json
+'
+-
+'
+taskcluster
+/
+scripts
+/
+misc
+/
+tooltool
+-
+download
+.
+sh
+'
+toolchain
+-
+artifact
+:
+public
+/
+build
+/
+clang
+.
+tar
+.
+xz
+toolchains
+:
+-
+linux64
+-
+gcc
+-
+4
+.
+9
+linux64
+-
+clang
+-
+5
+:
+description
+:
+"
+Clang
+5
+toolchain
+build
+"
+treeherder
+:
+kind
+:
+build
+platform
+:
+toolchains
+/
+opt
+symbol
+:
+TL
+(
+clang5
+)
+tier
+:
+1
+worker
+-
+type
+:
+aws
+-
+provisioner
+-
+v1
+/
+gecko
+-
+{
+level
+}
+-
+b
+-
+linux
+worker
+:
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+desktop
+-
+build
+}
+max
+-
+run
+-
+time
+:
+7200
+run
+:
+using
+:
+toolchain
+-
+script
+script
+:
+build
+-
+clang
+-
+5
+-
+linux
+.
+sh
+resources
+:
+-
+'
+build
+/
+build
+-
+clang
+/
+build
+-
+clang
+.
+py
+'
+-
+'
+build
+/
+build
+-
+clang
+/
+clang
+-
+5
 -
 linux64
 .
