--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
@@ -98,6 +98,21 @@ test_ext_browserSettings
 js
 ]
 [
+test_ext_browserSettings_homepage
+.
+js
+]
+skip
+-
+if
+=
+os
+=
+=
+"
+android
+"
+[
 test_ext_contextual_identities
 .
 js
