--- a/toolkit/components/extensions/test/mochitest/chrome.ini
+++ b/toolkit/components/extensions/test/mochitest/chrome.ini
@@ -96,6 +96,11 @@ test_chrome_ext_downloads_saveAs
 html
 ]
 [
+test_chrome_ext_downloads_uniquify
+.
+html
+]
+[
 test_chrome_ext_eventpage_warning
 .
 html
