Bug 1408211 - Update builders to rust 1.20.0. r=mshal
New upstream stable release.

Maintain rust-1.19 builds for verifying the minimum-supported
version, and because we have network failures when we build
sccache with rust 1.20 or 1.21.

MozReview-Commit-ID: 5qi8JDTjfzj

UltraBlame original commit: 95dff4968a191f64341700d28fa954d898cd8367

--- a/taskcluster/ci/toolchain/linux.yml
+++ b/taskcluster/ci/toolchain/linux.yml
@@ -132,7 +132,7 @@ run
 -
 time
 :
-7200
+36000
 run
 :
 using
@@ -304,7 +304,7 @@ run
 -
 time
 :
-7200
+36000
 run
 :
 using
@@ -350,167 +350,6 @@ clang
 clang
 -
 4
--
-linux64
-.
-json
-'
--
-'
-taskcluster
-/
-scripts
-/
-misc
-/
-tooltool
--
-download
-.
-sh
-'
-toolchain
--
-artifact
-:
-public
-/
-build
-/
-clang
-.
-tar
-.
-xz
-toolchains
-:
--
-linux64
--
-gcc
--
-4
-.
-9
-linux64
--
-clang
--
-5
-:
-description
-:
-"
-Clang
-5
-toolchain
-build
-"
-treeherder
-:
-kind
-:
-build
-platform
-:
-toolchains
-/
-opt
-symbol
-:
-TL
-(
-clang5
-)
-tier
-:
-1
-worker
--
-type
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-{
-level
-}
--
-b
--
-linux
-worker
-:
-docker
--
-image
-:
-{
-in
--
-tree
-:
-desktop
--
-build
-}
-max
--
-run
--
-time
-:
-7200
-run
-:
-using
-:
-toolchain
--
-script
-script
-:
-build
--
-clang
--
-5
--
-linux
-.
-sh
-resources
-:
--
-'
-build
-/
-build
--
-clang
-/
-build
--
-clang
-.
-py
-'
--
-'
-build
-/
-build
--
-clang
-/
-clang
--
-5
 -
 linux64
 .
@@ -1659,21 +1498,17 @@ tar
 xz
 linux64
 -
-proguard
+rust
 -
-jar
--
-repack
+1
+.
+20
 :
 description
 :
 "
-proguard
-.
-jar
+rust
 repack
-toolchain
-build
 "
 treeherder
 :
@@ -1689,9 +1524,7 @@ symbol
 :
 TL
 (
-proguard
--
-jar
+rust
 )
 tier
 :
@@ -1736,7 +1569,12 @@ run
 -
 time
 :
-36000
+7200
+env
+:
+UPLOAD_DIR
+:
+artifacts
 run
 :
 using
@@ -1746,13 +1584,74 @@ toolchain
 script
 script
 :
-repack
--
-proguard
--
-jar
+repack_rust
 .
-sh
+py
+arguments
+:
+[
+'
+-
+-
+channel
+'
+'
+1
+.
+20
+.
+0
+'
+'
+-
+-
+host
+'
+'
+x86_64
+-
+unknown
+-
+linux
+-
+gnu
+'
+'
+-
+-
+target
+'
+'
+x86_64
+-
+unknown
+-
+linux
+-
+gnu
+'
+'
+-
+-
+target
+'
+'
+i686
+-
+unknown
+-
+linux
+-
+gnu
+'
+]
+toolchain
+-
+alias
+:
+linux64
+-
+rust
 toolchain
 -
 artifact
@@ -1761,204 +1660,11 @@ public
 /
 build
 /
-proguard
--
-jar
+rustc
 .
 tar
 .
 xz
-toolchain
--
-alias
-:
-proguard
--
-jar
-linux64
--
-android
--
-sdk
--
-linux
--
-repack
-:
-description
-:
-"
-Android
-SDK
-(
-Linux
-)
-repack
-toolchain
-build
-"
-treeherder
-:
-kind
-:
-build
-platform
-:
-toolchains
-/
-opt
-symbol
-:
-TL
-(
-android
--
-sdk
--
-linux
-)
-tier
-:
-1
-worker
--
-type
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-{
-level
-}
--
-b
--
-linux
-worker
-:
-docker
--
-image
-:
-{
-in
--
-tree
-:
-android
--
-build
-}
-max
--
-run
--
-time
-:
-36000
-artifacts
-:
--
-name
-:
-project
-/
-gecko
-/
-android
--
-sdk
-path
-:
-/
-builds
-/
-worker
-/
-project
-/
-gecko
-/
-android
--
-sdk
-/
-type
-:
-directory
-run
-:
-using
-:
-toolchain
--
-script
-script
-:
-repack
--
-android
--
-sdk
--
-linux
-.
-sh
-tc
--
-vcs
-:
-false
-resources
-:
--
-'
-python
-/
-mozboot
-/
-*
-*
-/
-*
-android
-*
-'
-toolchain
--
-artifact
-:
-project
-/
-gecko
-/
-android
--
-sdk
-/
-android
--
-sdk
--
-linux
-.
-tar
-.
-xz
-toolchain
--
-alias
-:
-android
--
-sdk
--
-linux
 linux64
 -
 rust
@@ -1988,6 +1694,10 @@ symbol
 TL
 (
 rust
+-
+1
+.
+19
 )
 tier
 :
@@ -2110,13 +1820,6 @@ gnu
 ]
 toolchain
 -
-alias
-:
-linux64
--
-rust
-toolchain
--
 artifact
 :
 public
@@ -2136,7 +1839,7 @@ macos
 -
 1
 .
-19
+20
 :
 description
 :
@@ -2239,7 +1942,7 @@ channel
 '
 1
 .
-19
+20
 .
 0
 '
@@ -2314,7 +2017,7 @@ android
 -
 1
 .
-19
+20
 :
 description
 :
@@ -2417,7 +2120,7 @@ channel
 '
 1
 .
-19
+20
 .
 0
 '
@@ -2627,9 +2330,9 @@ toolchains
 -
 linux64
 -
-gcc
+clang
 -
-4
+3
 .
 9
 -
