--- a/taskcluster/ci/toolchain/windows.yml
+++ b/taskcluster/ci/toolchain/windows.yml
@@ -781,7 +781,7 @@ rust
 -
 1
 .
-19
+20
 :
 description
 :
@@ -877,7 +877,7 @@ channel
 '
 1
 .
-19
+20
 .
 0
 '
@@ -930,13 +930,165 @@ rustc
 tar
 .
 bz2
-win32
+win64
 -
 rust
 -
 1
 .
 19
+:
+description
+:
+"
+rust
+repack
+"
+treeherder
+:
+kind
+:
+build
+platform
+:
+toolchains
+/
+opt
+symbol
+:
+TW64
+(
+rust
+-
+1
+.
+19
+)
+tier
+:
+1
+worker
+-
+type
+:
+aws
+-
+provisioner
+-
+v1
+/
+gecko
+-
+{
+level
+}
+-
+b
+-
+linux
+worker
+:
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+desktop
+-
+build
+}
+max
+-
+run
+-
+time
+:
+7200
+env
+:
+UPLOAD_DIR
+:
+artifacts
+run
+:
+using
+:
+toolchain
+-
+script
+script
+:
+repack_rust
+.
+py
+arguments
+:
+[
+'
+-
+-
+channel
+'
+'
+1
+.
+19
+.
+0
+'
+'
+-
+-
+host
+'
+'
+x86_64
+-
+pc
+-
+windows
+-
+msvc
+'
+'
+-
+-
+target
+'
+'
+x86_64
+-
+pc
+-
+windows
+-
+msvc
+'
+]
+toolchain
+-
+artifact
+:
+public
+/
+build
+/
+rustc
+.
+tar
+.
+bz2
+win32
+-
+rust
+-
+1
+.
+20
 :
 description
 :
@@ -1032,7 +1184,7 @@ channel
 '
 1
 .
-19
+20
 .
 0
 '
@@ -1091,7 +1243,7 @@ rust
 -
 1
 .
-19
+20
 :
 description
 :
@@ -1187,7 +1339,7 @@ channel
 '
 1
 .
-19
+20
 .
 0
 '
