--- a/testing/web-platform/meta/encoding/unsupported-encodings.html.ini
+++ b/testing/web-platform/meta/encoding/unsupported-encodings.html.ini
@@ -11,6 +11,70 @@ testharness
 [
 UTF
 -
+32
+with
+BOM
+should
+decode
+as
+UTF
+-
+16LE
+]
+expected
+:
+FAIL
+[
+utf
+-
+32
+with
+BOM
+should
+decode
+as
+UTF
+-
+16LE
+]
+expected
+:
+FAIL
+[
+UTF
+-
+32LE
+with
+BOM
+should
+decode
+as
+UTF
+-
+16LE
+]
+expected
+:
+FAIL
+[
+utf
+-
+32le
+with
+BOM
+should
+decode
+as
+UTF
+-
+16LE
+]
+expected
+:
+FAIL
+[
+UTF
+-
 32be
 with
 BOM
