Bug 1405413 - Migrate Gradle dependency fetching to toolchain dependencies. r=dustin
MozReview-Commit-ID: 6OOD4mhICG1

UltraBlame original commit: 5ac2d6424a18fe414d2a955b6ad4bc1498d10fe7

--- a/taskcluster/ci/toolchain/linux.yml
+++ b/taskcluster/ci/toolchain/linux.yml
@@ -1961,11 +1961,278 @@ sdk
 linux
 linux64
 -
+android
+-
+gradle
+-
+dependencies
+:
+description
+:
+"
+Android
+Gradle
+dependencies
+toolchain
+task
+"
+treeherder
+:
+kind
+:
+build
+platform
+:
+toolchains
+/
+opt
+symbol
+:
+TL
+(
+gradle
+-
+dependencies
+)
+tier
+:
+1
+worker
+-
+type
+:
+aws
+-
+provisioner
+-
+v1
+/
+gecko
+-
+{
+level
+}
+-
+b
+-
+linux
+worker
+:
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+android
+-
+build
+}
+env
+:
+GRADLE_USER_HOME
+:
+"
+/
+builds
+/
+worker
+/
+workspace
+/
+build
+/
+src
+/
+mobile
+/
+android
+/
+gradle
+/
+dotgradle
+-
+online
+"
+max
+-
+run
+-
+time
+:
+36000
+run
+:
+using
+:
+toolchain
+-
+script
+script
+:
+android
+-
+gradle
+-
+dependencies
+.
+sh
+sparse
+-
+profile
+:
+null
+tc
+-
+vcs
+:
+false
+resources
+:
+-
+'
+taskcluster
+/
+scripts
+/
+misc
+/
+tooltool
+-
+download
+.
+sh
+'
+-
+'
+taskcluster
+/
+scripts
+/
+misc
+/
+android
+-
+gradle
+-
+dependencies
+/
+*
+*
+'
+-
+'
+*
+*
+/
+*
+.
+gradle
+'
+-
+'
+mobile
+/
+android
+/
+config
+/
+mozconfigs
+/
+android
+-
+api
+-
+16
+-
+gradle
+-
+dependencies
+/
+*
+*
+'
+-
+'
+mobile
+/
+android
+/
+config
+/
+mozconfigs
+/
+common
+*
+'
+toolchain
+-
+artifact
+:
+public
+/
+build
+/
+android
+-
+gradle
+-
+dependencies
+.
+tar
+.
+xz
+toolchain
+-
+alias
+:
+android
+-
+gradle
+-
+dependencies
+toolchains
+:
+#
+Aliases
+aren
+'
+t
+allowed
+for
+toolchains
+depending
+on
+toolchains
+.
+-
+linux64
+-
+android
+-
+sdk
+-
+linux
+-
+repack
+-
+linux64
+-
+proguard
+-
+jar
+-
+repack
+linux64
+-
 rust
 -
 1
 .
-20
+19
 :
 description
 :
@@ -2061,7 +2328,7 @@ channel
 '
 1
 .
-20
+19
 .
 0
 '
@@ -2132,177 +2399,11 @@ linux64
 -
 rust
 -
-1
-.
-19
-:
-description
-:
-"
-rust
-repack
-"
-treeherder
-:
-kind
-:
-build
-platform
-:
-toolchains
-/
-opt
-symbol
-:
-TL
-(
-rust
--
-1
-.
-19
-)
-tier
-:
-1
-worker
--
-type
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-{
-level
-}
--
-b
--
-linux
-worker
-:
-docker
--
-image
-:
-{
-in
--
-tree
-:
-desktop
--
-build
-}
-max
--
-run
--
-time
-:
-7200
-env
-:
-UPLOAD_DIR
-:
-artifacts
-run
-:
-using
-:
-toolchain
--
-script
-script
-:
-repack_rust
-.
-py
-arguments
-:
-[
-'
--
--
-channel
-'
-'
-1
-.
-19
-.
-0
-'
-'
--
--
-host
-'
-'
-x86_64
--
-unknown
--
-linux
--
-gnu
-'
-'
--
--
-target
-'
-'
-x86_64
--
-unknown
--
-linux
--
-gnu
-'
-'
--
--
-target
-'
-'
-i686
--
-unknown
--
-linux
--
-gnu
-'
-]
-toolchain
--
-artifact
-:
-public
-/
-build
-/
-rustc
-.
-tar
-.
-xz
-linux64
--
-rust
--
 macos
 -
 1
 .
-20
+19
 :
 description
 :
@@ -2405,7 +2506,7 @@ channel
 '
 1
 .
-20
+19
 .
 0
 '
@@ -2480,7 +2581,7 @@ android
 -
 1
 .
-20
+19
 :
 description
 :
@@ -2583,7 +2684,7 @@ channel
 '
 1
 .
-20
+19
 .
 0
 '
