Bug 1384312 - Support generating JNI wrappers under --with-gradle, r=nalexander
MozReview-Commit-ID: HECL60Ggeqn

UltraBlame original commit: 9a3c4f7cd85e1007ed60708fe9c7b1cfff2afa23

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -3217,6 +3217,23 @@ variant
 )
 }
 }
+android
+.
+applicationVariants
+.
+all
+{
+variant
+-
+>
+configureVariantWithJNIWrappers
+(
+variant
+"
+Fennec
+"
+)
+}
 apply
 plugin
 :
