--- a/mobile/android/geckoview/build.gradle
+++ b/mobile/android/geckoview/build.gradle
@@ -1572,6 +1572,23 @@ source
 )
 }
 }
+android
+.
+libraryVariants
+.
+all
+{
+variant
+-
+>
+configureVariantWithJNIWrappers
+(
+variant
+"
+Generated
+"
+)
+}
 apply
 plugin
 :
