--- a/mobile/android/base/Makefile.in
+++ b/mobile/android/base/Makefile.in
@@ -165,6 +165,20 @@ res
 sync
 services
 generated
+gradle_dir
+:
+=
+(
+topobjdir
+)
+/
+gradle
+/
+build
+/
+mobile
+/
+android
 #
 The
 bootclasspath
@@ -759,6 +773,8 @@ java_bundled_libs
 )
 )
 )
+ifndef
+MOZ_BUILD_MOBILE_ANDROID_WITH_GRADLE
 GECKOVIEW_JARS
 =
 \
@@ -843,22 +859,6 @@ leanplum_sdk
 .
 jar
 endif
-geckoview_jars_classpath
-:
-=
-(
-subst
-(
-NULL
-)
-:
-(
-strip
-(
-GECKOVIEW_JARS
-)
-)
-)
 FENNEC_JARS
 =
 \
@@ -906,6 +906,82 @@ stumbler
 .
 jar
 endif
+else
+#
+MOZ_BUILD_MOBILE_ANDROID_WITH_GRADLE
+GECKOVIEW_JARS
+:
+=
+(
+gradle_dir
+)
+/
+geckoview
+/
+intermediates
+/
+bundles
+/
+debug
+/
+classes
+.
+jar
+FENNEC_JARS
+:
+=
+(
+gradle_dir
+)
+/
+app
+/
+intermediates
+/
+packaged
+/
+officialPhoton
+/
+debug
+/
+classes
+.
+jar
+(
+GECKOVIEW_JARS
+)
+:
+.
+gradle
+.
+deps
+(
+FENNEC_JARS
+)
+:
+.
+gradle
+.
+deps
+endif
+#
+MOZ_BUILD_MOBILE_ANDROID_WITH_GRADLE
+geckoview_jars_classpath
+:
+=
+(
+subst
+(
+NULL
+)
+:
+(
+strip
+(
+GECKOVIEW_JARS
+)
+)
+)
 #
 All
 the
@@ -1315,20 +1391,6 @@ library_jars
 )
 )
 )
-gradle_dir
-:
-=
-(
-topobjdir
-)
-/
-gradle
-/
-build
-/
-mobile
-/
-android
 ifdef
 MOZ_BUILD_MOBILE_ANDROID_WITH_GRADLE
 .
@@ -1351,12 +1413,22 @@ topsrcdir
 mach
 gradle
 \
+geckoview
+:
+generateJNIWrappersForGeneratedRelease
+\
+app
+:
+generateJNIWrappersForFennecOfficialPhotonDebug
+\
 app
 :
 assembleOfficialPhotonDebug
+\
 app
 :
 assembleOfficialPhotonDebugAndroidTest
+\
 -
 x
 lint
@@ -1399,6 +1471,40 @@ main
 classes
 .
 dex
+GeneratedJNIWrappers
+.
+cpp
+GeneratedJNIWrappers
+.
+h
+GeneratedJNINatives
+.
+h
+:
+.
+gradle
+.
+deps
+(
+REPORT_BUILD
+)
+FennecJNIWrappers
+.
+cpp
+FennecJNIWrappers
+.
+h
+FennecJNINatives
+.
+h
+:
+.
+gradle
+.
+deps
+(
+REPORT_BUILD
+)
 else
 classes
 .
@@ -1432,7 +1538,6 @@ jumbo
 jars
 -
 proguarded
-endif
 ifdef
 MOZ_DISABLE_PROGUARD
 PROGUARD_PASSES
@@ -2119,6 +2224,9 @@ Fennec
 (
 FENNEC_JARS
 )
+endif
+#
+MOZ_BUILD_MOBILE_ANDROID_WITH_GRADLE
 include
 (
 topsrcdir
@@ -4296,8 +4404,6 @@ and
 FennecJNINatives
 .
 h
-ifndef
-MOZ_BUILD_MOBILE_ANDROID_WITH_GRADLE
 #
 List
 of
@@ -5044,7 +5150,6 @@ echo
 exit
 1
 )
-endif
 libs
 :
 :
@@ -5060,6 +5165,8 @@ dex
 (
 FINAL_TARGET
 )
+ifndef
+MOZ_BUILD_MOBILE_ANDROID_WITH_GRADLE
 #
 Generate
 Java
@@ -5390,3 +5497,6 @@ o
 fennec_aidl_target_path
 )
 <
+endif
+#
+MOZ_BUILD_MOBILE_ANDROID_WITH_GRADLE
