--- a/mobile/android/base/strings.xml.in
+++ b/mobile/android/base/strings.xml.in
@@ -8186,6 +8186,66 @@ fullscreen_warning
 string
 >
 <
+string
+name
+=
+"
+pwa_add_to_launcher_confirm
+"
+>
+&
+pwa_add_to_launcher_confirm
+;
+<
+/
+string
+>
+<
+string
+name
+=
+"
+pwa_add_to_launcher_badge
+"
+>
+&
+pwa_add_to_launcher_badge
+;
+<
+/
+string
+>
+<
+string
+name
+=
+"
+pwa_onboarding_sumo
+"
+>
+&
+pwa_onboarding_sumo
+;
+<
+/
+string
+>
+<
+string
+name
+=
+"
+pwa_continue_to_website
+"
+>
+&
+pwa_continue_to_website
+;
+<
+/
+string
+>
+<
 /
 resources
 >
