servo: Merge #18885 - Add a default 'unstable' feature to CEF (from servo:unstable-cef); r=nox
I recently moved that default from libservo to ports/servo, which made CEF not have it anymore.

The different defaults made `./mach build-cef` after `./mach build` rebuild many libraries (including serde and all of its recursive dependents) and take a long time.

Source-Repo: https://github.com/servo/servo
Source-Revision: 086c48210c1ea0b65c91e1b300f796758080871f

UltraBlame original commit: a351b07fc97fe1b008b2c89e22e85afaf815e37c

--- a/servo/ports/cef/Cargo.toml
+++ b/servo/ports/cef/Cargo.toml
@@ -86,6 +86,37 @@ libservo
 debugmozjs
 "
 ]
+default
+=
+[
+"
+unstable
+"
+"
+default
+-
+except
+-
+unstable
+"
+]
+default
+-
+except
+-
+unstable
+=
+[
+]
+unstable
+=
+[
+"
+libservo
+/
+unstable
+"
+]
 [
 dependencies
 ]
