--- a/gfx/layers/apz/test/mochitest/mochitest.ini
+++ b/gfx/layers/apz/test/mochitest/mochitest.ini
@@ -241,6 +241,29 @@ test_group_pointerevents
 .
 html
 ]
+skip
+-
+if
+=
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+0
+'
+#
+Bug
+1404836
 [
 test_group_touchevents
 .
