Bug 1005755 - Test for pause/stop button; r=nchevobbe
MozReview-Commit-ID: CrAlkLopl9U

UltraBlame original commit: 1d56f718253d6b74af4b73b65a3b8c8ce221be86

--- a/devtools/client/netmonitor/test/browser.ini
+++ b/devtools/client/netmonitor/test/browser.ini
@@ -178,6 +178,13 @@ test
 page
 .
 html
+html_pause
+-
+test
+-
+page
+.
+html
 html_post
 -
 data
@@ -1075,6 +1082,11 @@ js
 browser_net_pane
 -
 toggle
+.
+js
+]
+[
+browser_net_pause
 .
 js
 ]
