Bug 1407900 - Part 2: Add test for hidden panel. r=pbro
MozReview-Commit-ID: 2ied0w6KY14

UltraBlame original commit: eeff76e2b49bcaf508efe35a7b67c94250b7289e

--- a/devtools/client/animationinspector/test/browser.ini
+++ b/devtools/client/animationinspector/test/browser.ini
@@ -285,6 +285,11 @@ browser_animation_refresh_when_active
 js
 ]
 [
+browser_animation_refresh_when_active_after_mutations
+.
+js
+]
+[
 browser_animation_running_on_compositor
 .
 js
