--- a/devtools/client/debugger/new/test/mochitest/browser.ini
+++ b/devtools/client/debugger/new/test/mochitest/browser.ini
@@ -519,6 +519,31 @@ js
 [
 browser_dbg
 -
+browser
+-
+content
+-
+toolbox
+.
+js
+]
+skip
+-
+if
+=
+!
+e10s
+#
+This
+test
+is
+only
+valid
+in
+e10s
+[
+browser_dbg
+-
 call
 -
 stack
