Bug 1408215 - Update builders to rust 1.21.0. r=froydnj,gps
New upstream release.

Maintain a linux64-rust-1.20 for use verifying the minimum-
supported rust version once we update it.

We still use rust 1.19 to build sccache since there are
network connection issues when it's built with more recent
rust releases.

MozReview-Commit-ID: 9KjdYAAQZRa

UltraBlame original commit: bb1ab10dd75e39aa3d0355295a57df81daf565a9

--- a/taskcluster/ci/toolchain/linux.yml
+++ b/taskcluster/ci/toolchain/linux.yml
@@ -2232,6 +2232,175 @@ rust
 -
 1
 .
+21
+:
+description
+:
+"
+rust
+repack
+"
+treeherder
+:
+kind
+:
+build
+platform
+:
+toolchains
+/
+opt
+symbol
+:
+TL
+(
+rust
+)
+tier
+:
+1
+worker
+-
+type
+:
+aws
+-
+provisioner
+-
+v1
+/
+gecko
+-
+{
+level
+}
+-
+b
+-
+linux
+worker
+:
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+desktop
+-
+build
+}
+max
+-
+run
+-
+time
+:
+7200
+env
+:
+UPLOAD_DIR
+:
+artifacts
+run
+:
+using
+:
+toolchain
+-
+script
+script
+:
+repack_rust
+.
+py
+arguments
+:
+[
+'
+-
+-
+channel
+'
+'
+1
+.
+21
+.
+0
+'
+'
+-
+-
+host
+'
+'
+x86_64
+-
+unknown
+-
+linux
+-
+gnu
+'
+'
+-
+-
+target
+'
+'
+x86_64
+-
+unknown
+-
+linux
+-
+gnu
+'
+'
+-
+-
+target
+'
+'
+i686
+-
+unknown
+-
+linux
+-
+gnu
+'
+]
+toolchain
+-
+alias
+:
+linux64
+-
+rust
+toolchain
+-
+artifact
+:
+public
+/
+build
+/
+rustc
+.
+tar
+.
+xz
+linux64
+-
+rust
+-
+1
+.
 20
 :
 description
@@ -2255,6 +2424,10 @@ symbol
 TL
 (
 rust
+-
+1
+.
+20
 )
 tier
 :
@@ -2375,13 +2548,6 @@ linux
 gnu
 '
 ]
-toolchain
--
-alias
-:
-linux64
--
-rust
 toolchain
 -
 artifact
@@ -2569,7 +2735,7 @@ macos
 -
 1
 .
-20
+21
 :
 description
 :
@@ -2672,7 +2838,7 @@ channel
 '
 1
 .
-20
+21
 .
 0
 '
@@ -2747,7 +2913,7 @@ android
 -
 1
 .
-20
+21
 :
 description
 :
@@ -2850,7 +3016,7 @@ channel
 '
 1
 .
-20
+21
 .
 0
 '
