Bug 1393190 - Pass revision in to mozharness, so we can run correctly on windows try without needing to play with hg commands, since it's not passed via a shell script. r=aki
MozReview-Commit-ID: Cey9CukASCy

UltraBlame original commit: 788c12045097976613b7fa77010f92b04f7f9ace

--- a/taskcluster/ci/nightly-l10n/kind.yml
+++ b/taskcluster/ci/nightly-l10n/kind.yml
@@ -1223,6 +1223,10 @@ config
 taskcluster_nightly
 .
 py
+-
+revision
+=
+GECKO_HEAD_REV
 win64
 -
 nightly
@@ -1273,6 +1277,10 @@ config
 taskcluster_nightly
 .
 py
+-
+revision
+=
+GECKO_HEAD_REV
 default
 :
 [
