Bug 1408511 - Use 'job-defaults' in source-test/python.yml and source-test/mozlint.yml, r=dustin
This is a minor cleanup of some of the source-test configs.

MozReview-Commit-ID: EssE4V4VoXx

UltraBlame original commit: 8f1ac7984b6825c7c71240d48a1fd91a1bcb53fe

--- a/taskcluster/ci/source-test/mozlint.yml
+++ b/taskcluster/ci/source-test/mozlint.yml
@@ -1,20 +1,9 @@
-eslint
+job
+-
+defaults
 :
-description
-:
-JS
-lint
-check
-platform
-:
-lint
-/
-opt
 treeherder
 :
-symbol
-:
-ES
 kind
 :
 test
@@ -60,6 +49,59 @@ run
 time
 :
 1800
+run
+:
+using
+:
+mach
+when
+:
+files
+-
+changed
+:
+#
+Other
+misc
+lint
+related
+files
+.
+-
+'
+python
+/
+mozlint
+/
+*
+*
+'
+-
+'
+tools
+/
+lint
+/
+*
+*
+'
+eslint
+:
+description
+:
+JS
+lint
+check
+platform
+:
+lint
+/
+opt
+treeherder
+:
+symbol
+:
+ES
 run
 :
 using
@@ -281,31 +323,6 @@ js
 *
 *
 '
-#
-Other
-misc
-lint
-related
-files
-.
--
-'
-python
-/
-mozlint
-/
-*
-*
-'
--
-'
-tools
-/
-lint
-/
-*
-*
-'
 py
 -
 compat
@@ -332,56 +349,8 @@ symbol
 py
 -
 compat
-kind
-:
-test
-tier
-:
-1
-worker
--
-type
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-t
--
-linux
--
-xlarge
-worker
-:
-docker
--
-image
-:
-{
-in
--
-tree
-:
-"
-lint
-"
-}
-max
--
-run
--
-time
-:
-1800
 run
 :
-using
-:
-mach
 mach
 :
 lint
@@ -417,24 +386,6 @@ py
 .
 flake8
 '
--
-'
-python
-/
-mozlint
-/
-*
-*
-'
--
-'
-tools
-/
-lint
-/
-*
-*
-'
 py
 -
 flake8
@@ -457,56 +408,8 @@ treeherder
 symbol
 :
 f8
-kind
-:
-test
-tier
-:
-1
-worker
--
-type
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-t
--
-linux
--
-xlarge
-worker
-:
-docker
--
-image
-:
-{
-in
--
-tree
-:
-"
-lint
-"
-}
-max
--
-run
--
-time
-:
-1800
 run
 :
-using
-:
-mach
 mach
 :
 lint
@@ -539,24 +442,6 @@ py
 .
 flake8
 '
--
-'
-python
-/
-mozlint
-/
-*
-*
-'
--
-'
-tools
-/
-lint
-/
-*
-*
-'
 test
 -
 manifest
@@ -576,56 +461,8 @@ treeherder
 symbol
 :
 tm
-kind
-:
-test
-tier
-:
-1
-worker
--
-type
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-t
--
-linux
--
-xlarge
-worker
-:
-docker
--
-image
-:
-{
-in
--
-tree
-:
-"
-lint
-"
-}
-max
--
-run
--
-time
-:
-1800
 run
 :
-using
-:
-mach
 mach
 :
 lint
@@ -692,56 +529,8 @@ treeherder
 symbol
 :
 W
-kind
-:
-test
-tier
-:
-1
-worker
--
-type
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-t
--
-linux
--
-xlarge
-worker
-:
-docker
--
-image
-:
-{
-in
--
-tree
-:
-"
-lint
-"
-}
-max
--
-run
--
-time
-:
-1800
 run
 :
-using
-:
-mach
 mach
 :
 lint
@@ -818,24 +607,6 @@ MANIFEST
 .
 json
 '
--
-'
-python
-/
-mozlint
-/
-*
-*
-'
--
-'
-tools
-/
-lint
-/
-*
-*
-'
 yaml
 :
 description
@@ -856,56 +627,8 @@ treeherder
 symbol
 :
 yaml
-kind
-:
-test
-tier
-:
-1
-worker
--
-type
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-t
--
-linux
--
-xlarge
-worker
-:
-docker
--
-image
-:
-{
-in
--
-tree
-:
-"
-lint
-"
-}
-max
--
-run
--
-time
-:
-1800
 run
 :
-using
-:
-mach
 mach
 :
 lint
@@ -946,22 +669,4 @@ yaml
 /
 .
 ymllint
-'
--
-'
-python
-/
-mozlint
-/
-*
-*
-'
--
-'
-tools
-/
-lint
-/
-*
-*
 '
