--- a/taskcluster/ci/source-test/python.yml
+++ b/taskcluster/ci/source-test/python.yml
@@ -1,36 +1,23 @@
-taskgraph
+job
 -
-tests
+defaults
 :
-description
-:
-taskcluster
-/
-taskgraph
-unit
-tests
 platform
 :
 linux64
 /
 opt
-treeherder
-:
-symbol
-:
-py
-(
-tg
-)
-kind
-:
-test
-tier
-:
-2
 worker
 -
 type
+:
+by
+-
+platform
+:
+linux64
+.
+*
 :
 aws
 -
@@ -45,6 +32,60 @@ t
 linux
 -
 xlarge
+treeherder
+:
+kind
+:
+test
+tier
+:
+2
+run
+:
+using
+:
+mach
+when
+:
+files
+-
+changed
+:
+-
+'
+config
+/
+mozunit
+.
+py
+'
+-
+'
+python
+/
+mach_commands
+.
+py
+'
+taskgraph
+-
+tests
+:
+description
+:
+taskcluster
+/
+taskgraph
+unit
+tests
+treeherder
+:
+symbol
+:
+py
+(
+tg
+)
 worker
 :
 docker
@@ -69,9 +110,6 @@ time
 1800
 run
 :
-using
-:
-mach
 mach
 :
 python
@@ -95,14 +133,6 @@ taskcluster
 *
 /
 *
-.
-py
-'
--
-'
-config
-/
-mozunit
 .
 py
 '
@@ -132,11 +162,6 @@ marionette
 harness
 unit
 tests
-platform
-:
-linux64
-/
-opt
 treeherder
 :
 symbol
@@ -145,37 +170,6 @@ py
 (
 mnh
 )
-kind
-:
-test
-tier
-:
-2
-worker
--
-type
-:
-by
--
-platform
-:
-linux64
-.
-*
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-t
--
-linux
--
-xlarge
 worker
 :
 by
@@ -208,9 +202,6 @@ time
 3600
 run
 :
-using
-:
-mach
 mach
 :
 python
@@ -274,14 +265,6 @@ packages
 .
 txt
 '
--
-'
-python
-/
-mach_commands
-.
-py
-'
 mochitest
 -
 harness
@@ -321,37 +304,6 @@ py
 (
 mch
 )
-kind
-:
-test
-tier
-:
-2
-worker
--
-type
-:
-by
--
-platform
-:
-linux64
-.
-*
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-t
--
-linux
--
-xlarge
 worker
 :
 by
@@ -441,22 +393,6 @@ files
 -
 changed
 :
--
-'
-config
-/
-mozunit
-.
-py
-'
--
-'
-python
-/
-mach_commands
-.
-py
-'
 -
 '
 testing
@@ -558,37 +494,6 @@ py
 (
 mb
 )
-kind
-:
-test
-tier
-:
-2
-worker
--
-type
-:
-by
--
-platform
-:
-linux64
-.
-*
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-t
--
-linux
--
-xlarge
 worker
 :
 by
@@ -621,9 +526,6 @@ time
 3600
 run
 :
-using
-:
-mach
 mach
 :
 python
@@ -648,22 +550,6 @@ mozbase
 *
 *
 '
--
-'
-config
-/
-mozunit
-.
-py
-'
--
-'
-python
-/
-mach_commands
-.
-py
-'
 mozharness
 :
 description
@@ -684,29 +570,6 @@ py
 (
 mh
 )
-kind
-:
-test
-tier
-:
-2
-worker
--
-type
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-t
--
-linux
--
-xlarge
 worker
 :
 docker
@@ -811,37 +674,6 @@ py
 (
 ml
 )
-kind
-:
-test
-tier
-:
-2
-worker
--
-type
-:
-by
--
-platform
-:
-linux64
-.
-*
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-t
--
-linux
--
-xlarge
 worker
 :
 by
@@ -874,9 +706,6 @@ time
 3600
 run
 :
-using
-:
-mach
 mach
 :
 python
@@ -900,14 +729,6 @@ mozlint
 /
 *
 *
-'
--
-'
-python
-/
-mach_commands
-.
-py
 '
 mozversioncontrol
 :
@@ -931,37 +752,6 @@ py
 (
 vcs
 )
-kind
-:
-test
-tier
-:
-2
-worker
--
-type
-:
-by
--
-platform
-:
-linux64
-.
-*
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-t
--
-linux
--
-xlarge
 worker
 :
 by
@@ -994,9 +784,6 @@ time
 3600
 run
 :
-using
-:
-mach
 mach
 :
 python
@@ -1020,14 +807,6 @@ mozversioncontrol
 /
 *
 *
-'
--
-'
-python
-/
-mach_commands
-.
-py
 '
 reftest
 -
@@ -1070,37 +849,6 @@ py
 (
 ref
 )
-kind
-:
-test
-tier
-:
-2
-worker
--
-type
-:
-by
--
-platform
-:
-linux64
-.
-*
-:
-aws
--
-provisioner
--
-v1
-/
-gecko
--
-t
--
-linux
--
-xlarge
 worker
 :
 by
@@ -1192,14 +940,6 @@ changed
 :
 -
 '
-config
-/
-mozunit
-.
-py
-'
--
-'
 layout
 /
 tools
@@ -1208,14 +948,6 @@ reftest
 /
 *
 *
-'
--
-'
-python
-/
-mach_commands
-.
-py
 '
 -
 '
