servo: Merge #18875 - Remove the need for rust-mozjs to use unstable Rust features (from servo:stable-js); r=nox,jdm
Source-Repo: https://github.com/servo/servo
Source-Revision: e8a6f2862c2a6084e4f4e64ab466c89ae83cff59

UltraBlame original commit: 8743b976b6c7be657ea69a0106671fde0cc6c227

--- a/servo/components/script/Cargo.toml
+++ b/servo/components/script/Cargo.toml
@@ -71,6 +71,10 @@ js
 debugmozjs
 '
 ]
+unstable
+=
+[
+]
 [
 build
 -
@@ -508,6 +512,18 @@ path
 .
 /
 net_traits
+"
+}
+nonzero
+=
+{
+path
+=
+"
+.
+.
+/
+nonzero
 "
 }
 num
