--- a/servo/etc/ci/buildbot_steps.yml
+++ b/servo/etc/ci/buildbot_steps.yml
@@ -1457,6 +1457,33 @@ build
 -
 cef
 -
+env
+SERVO_RUSTC_LLVM_ASSERTIONS
+=
+1
+.
+/
+mach
+build
+-
+-
+dev
+-
+-
+no
+-
+default
+-
+features
+-
+-
+features
+default
+-
+except
+-
+unstable
+-
 .
 /
 mach
