Bug 1387827 - Disable 2 devtools tests on coverage builds for frequent timeouts. r=gbrown, a=test-only
UltraBlame original commit: f7bf0e6554570b40e6ce701f1f3f3ef0941fa802

--- a/devtools/client/aboutdebugging/test/browser.ini
+++ b/devtools/client/aboutdebugging/test/browser.ini
@@ -176,6 +176,14 @@ browser_addons_debug_bootstrapped
 .
 js
 ]
+skip
+-
+if
+=
+coverage
+#
+Bug
+1387827
 [
 browser_addons_debug_info
 .
@@ -210,6 +218,14 @@ browser_addons_debug_webextension_popup
 .
 js
 ]
+skip
+-
+if
+=
+coverage
+#
+Bug
+1387827
 tags
 =
 webextensions
