Bug 1408468 - Shapes highlighter handles for shapes in iframe cannot be clicked outside iframe. r=gl
MozReview-Commit-ID: 3J4J6vM96sj

UltraBlame original commit: 3df6520e217f7bda8b6f30b979e30101e2e5ec39

--- a/devtools/client/inspector/test/browser.ini
+++ b/devtools/client/inspector/test/browser.ini
@@ -78,6 +78,9 @@ html
 doc_inspector_highlighter_cssshapes
 .
 html
+doc_inspector_highlighter_cssshapes_iframe
+.
+html
 doc_inspector_highlighter_csstransform
 .
 html
@@ -513,6 +516,13 @@ js
 browser_inspector_highlighter
 -
 cssshape_05
+.
+js
+]
+[
+browser_inspector_highlighter
+-
+cssshape_iframe_01
 .
 js
 ]
