Bug 1399956 - Disable some mochitests in headless. r=jrmuizel
These tests will need more work and are low priority.

MozReview-Commit-ID: H0J16E8FqNr

UltraBlame original commit: 9fe990f0398b03913411bd747c0c18a3b7e89b97

--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -954,6 +954,14 @@ test_anonymousContent_canvas
 .
 html
 ]
+skip
+-
+if
+=
+headless
+#
+Bug
+1405867
 [
 test_anonymousContent_insert
 .
@@ -1197,6 +1205,14 @@ toolkit
 '
 android
 '
+|
+|
+headless
+#
+Headless
+:
+Bug
+1405868
 [
 test_bug333198
 .
