--- a/dom/security/test/mixedcontentblocker/mochitest.ini
+++ b/dom/security/test/mixedcontentblocker/mochitest.ini
@@ -117,6 +117,9 @@ bits
 =
 32
 )
+|
+|
+headless
 #
 Android
 :
@@ -126,6 +129,11 @@ Linux32
 :
 bug
 1324870
+;
+Headless
+:
+bug
+1405870
 [
 test_frameNavigation
 .
