--- a/toolkit/components/extensions/test/mochitest/mochitest-common.ini
+++ b/toolkit/components/extensions/test/mochitest/mochitest-common.ini
@@ -219,11 +219,11 @@ test_ext_clipboard_image
 .
 html
 ]
-#
 skip
 -
 if
 =
+headless
 #
 disabled
 test
@@ -233,6 +233,10 @@ see
 inline
 comment
 .
+Headless
+:
+Bug
+1405872
 [
 test_ext_inIncognitoContext_window
 .
