Bug 1399956 - Add headless mochitests to taskcluster. r=jmaher
MozReview-Commit-ID: IGnl6WroOOV

UltraBlame original commit: 81d911b75946db383508b9df27a9c2f80bea3798

--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -274,6 +274,10 @@ tests
 reftest
 -
 stylo
+-
+mochitest
+-
+headless
 linux64
 /
 opt
@@ -327,6 +331,10 @@ stylo
 disabled
 -
 awsy
+-
+mochitest
+-
+headless
 linux64
 -
 nightly
