--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -786,9 +786,9 @@ test
 -
 platform
 :
-windows10
+windows7
 -
-64
+32
 /
 debug
 :
@@ -1819,9 +1819,9 @@ jsdcov
 opt
 :
 false
-windows10
+windows7
 -
-64
+32
 /
 debug
 :
@@ -4794,6 +4794,176 @@ default
 default
 mochitest
 -
+plain
+-
+headless
+:
+description
+:
+"
+Mochitest
+plain
+headless
+run
+"
+suite
+:
+mochitest
+/
+plain
+-
+chunked
+treeherder
+-
+symbol
+:
+tc
+-
+M
+(
+h
+)
+loopback
+-
+video
+:
+true
+instance
+-
+size
+:
+legacy
+#
+Bug
+1281241
+:
+migrating
+to
+m3
+.
+large
+instances
+chunks
+:
+by
+-
+test
+-
+platform
+:
+linux
+.
+*
+:
+10
+e10s
+:
+true
+max
+-
+run
+-
+time
+:
+5400
+allow
+-
+software
+-
+gl
+-
+layers
+:
+false
+tier
+:
+default
+mozharness
+:
+mochitest
+-
+flavor
+:
+plain
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+chunked
+:
+true
+config
+:
+by
+-
+test
+-
+platform
+:
+windows
+.
+*
+:
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
+macosx
+.
+*
+:
+-
+unittests
+/
+mac_unittest
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+extra
+-
+options
+:
+-
+-
+-
+mochitest
+-
+suite
+=
+plain
+-
+chunked
+-
+-
+-
+headless
+mochitest
+-
 valgrind
 :
 description
@@ -5413,9 +5583,9 @@ test
 -
 platform
 :
-windows10
+windows7
 -
-64
+32
 /
 debug
 :
@@ -5895,9 +6065,9 @@ jsdcov
 opt
 :
 false
-windows10
+windows7
 -
-64
+32
 /
 debug
 :
