Bug 1407398 - Run talos tp6 and ts_paint in duplication but with a heavy user-profile; r=jmaher
MozReview-Commit-ID: 5AL1DIz6Raq

UltraBlame original commit: 85e56b82f49656aa6bb995d98f228dbe66cf6953

--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -367,6 +367,14 @@ threads
 talos
 -
 speedometer
+-
+talos
+-
+h1
+-
+talos
+-
+h2
 awsy
 :
 -
@@ -930,6 +938,14 @@ threads
 talos
 -
 speedometer
+-
+talos
+-
+h1
+-
+talos
+-
+h2
 windows
 -
 talos
@@ -1222,6 +1238,14 @@ threads
 talos
 -
 speedometer
+-
+talos
+-
+h1
+-
+talos
+-
+h2
 macosx64
 -
 talos
