Bug 1404250 - Ensure that target bitrate is between minimum and maximum bitrates in VideoConduit; r=pehrsons
MozReview-Commit-ID: Am19abfrETx

UltraBlame original commit: 3d089604ad0d4944e7d34a0655065943a8e2f2d2

--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -2666,6 +2666,33 @@ on
 emulator
 )
 [
+test_peerConnection_restrictBandwidthTargetBitrate
+.
+html
+]
+skip
+-
+if
+=
+android_version
+=
+=
+'
+18
+'
+#
+android
+(
+Bug
+1189784
+timeouts
+on
+4
+.
+3
+emulator
+)
+[
 test_peerConnection_restrictBandwidthWithTias
 .
 html
