--- a/browser/components/extensions/test/mochitest/mochitest.ini
+++ b/browser/components/extensions/test/mochitest/mochitest.ini
@@ -61,11 +61,44 @@ mochitest
 file_sample
 .
 html
+.
+.
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+toolkit
+/
+components
+/
+extensions
+/
+test
+/
+mochitest
+/
+redirection
+.
+sjs
 tags
 =
 webextensions
 [
 test_ext_all_apis
+.
+html
+]
+[
+test_ext_history_redirect
 .
 html
 ]
